--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
     <meta property="og:title" content="alo.ne - Privacy Perfected" />
     <meta property="og:description" content="Luxury bio links, image hosting, and email services with uncompromising privacy." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://your-domain.vercel.app" />
+    <meta property="og:image" content="https://your-domain.vercel.app/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@alone" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="alo.ne - Privacy Perfected" />
+    <meta name="twitter:description" content="Luxury bio links, image hosting, and email services with uncompromising privacy." />
+    <meta name="twitter:image" content="https://your-domain.vercel.app/og-image.png" />
     
     <!-- Google Fonts - Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
