--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <meta name="twitter:description" content="Luxury bio links, image hosting, and email services with uncompromising privacy." />
     <meta name="twitter:image" content="https://your-domain.vercel.app/og-image.png" />
     
-    <!-- Google Fonts - Inter -->
+    <!-- Google Fonts - JetBrains Mono -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   </head>
 
   <body>
