fix: add favicon link for improved branding and user experience

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>alo.ne - Privacy Perfected | Luxury Bio Links, Image Hosting & Email</title>
     <meta name="description" content="The luxury bio link, image hosting, and email service designed for those who value discretion. Premium privacy-first digital services." />
